Update GitTest.java